@@ -5786,6 +5786,11 @@ consider_binding_level (tree name, best_match <tree, const char *> &bm,
       if (!suggestion)
 	continue;
 
+      /* Don't suggest names that are for anonymous aggregate types, as
+	 they are an implementation detail generated by the compiler.  */
+      if (anon_aggrname_p (suggestion))
+	continue;
+
       const char *suggestion_str = IDENTIFIER_POINTER (suggestion);
 
       /* Ignore internal names with spaces in them.  */
