@@ -1,3 +1,8 @@
+2018-06-27  David Malcolm  <dmalcolm@redhat.com>
+
+	PR c++/86329
+	* g++.dg/lookup/pr86329.C: New test.
+
 2018-06-27  Carl Love  <cel@us.ibm.com>
 
 Add test case that was supposed to be added in commit 255556 on 2017-12-11.
