@@ -1,3 +1,9 @@
+2018-06-27  David Malcolm  <dmalcolm@redhat.com>
+
+	PR c++/86329
+	* name-lookup.c (consider_binding_level): Filter out names that
+	match anon_aggrname_p.
+
 2018-06-27  Jason Merrill  <jason@redhat.com>
 
 	* name-lookup.c (do_pushtag): If we skip a class level, also skip
